# BerryPHP

./: LICENSE  README.md  build.sh  compile.sh  run.sh
.github/workflows/: cd.yml  ci.yml
benchmarks/: results.md  run_benchmarks.sh
berryphp/: composer.json
berryphp-cli/: berryphp
berryphp/lang/: en.json  fr.json
berryphp/src/: App.php  Async.php  Auth.php  BerryView.php  Cache.php  GraphQL.php  I18n.php  Logger.php  Metrics.php  Pool.php  Request.php  Response.php  Security.php
berryphp/tests/: composer.php  view.php
berryphp/views/: welcome.berry
berryrt/: async.c  berryrt.c  config.m4  configure.ac  db.c  graphql.c  http.c  redis.c  sse.c  ws.c
docs/: index.md
marketing/blog/: launch.md
marketing/social/: twitter.md
website/: forum.php
